@@ -1,3 +1,7 @@
+2001-09-28  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* tkchat.tcl: corrected minor warnings and height of info box
+
 2001-09-27  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* tkchat.tcl: added options dialog, updated handling of nick
